--- a/src/components/code/code-js/js-corejs/pages/elem-array.html
+++ b/src/components/code/code-js/js-corejs/pages/elem-array.html
@@ -1,4 +1,4 @@
-<h1>Array</h1>
+<h1>Объект Array</h1>
 
 
 <!-- Содержание -->
@@ -132,255 +132,255 @@
   <ol>
     <li>
       <a href="#array-at">at()</a>
-      <br>Не изменяет исходный массив.
+      <br>Не изменяет исходный массив
       <br>Принимает индекс возвращаемого элемента. Это целое число, может быть также отрицательным
-      <br>Возвращает элемент массива с указанным индексом.
+      <br>Возвращает <strong>элемент</strong> массива с указанным индексом.
     </li>
     <li>
       <a href="#array-concat">concat()</a>
       <br>Не изменяет исходный массив
       <br>Принимает любое количество аргументов для добавления к исходному массиву
-      <br>Возвращает новый массив, содержащий исходный массив с добавленными указанными аргументами
+      <br>Возвращает <strong>новый массив</strong>, содержащий исходный массив с добавленными указанными аргументами
     </li>
     <li>
       <a href="#array-copy-within">copyWithin()</a>
       <br>Изменяет исходный массив
       <br>Принимает три параметра: начальный индекс куда копировать, начальный индекс откуда  копировать и опционально конечный индекс докуда копировать
-      <br>Возвращает исходный массив, не меняя его длины после копирования элементов массива внутри него
+      <br>Возвращает <strong>исходный массив</strong>, не меняя его длины после копирования элементов массива внутри него
     </li>
     <li>
       <a href="#array-entries">entries()</a>
       <br>Не изменяет исходный массив
       <br>Не принимает параметры
-      <br>Возвращает новый объект итератора массива Array Iterator, содержащий пары ключ / значение для каждого индекса в массиве
+      <br>Возвращает <strong>новый объект итератора</strong> массива Array Iterator, содержащий пары ключ / значение для каждого индекса в массиве
     </li>
     <li>
       <a href="#array-every">every()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию и опционально значение, которое подставится в this для этой callback-функции
-      <br>Возвращает true если все элементы подходят под условие заданное в функции, иначе возвращает false
+      <br>Возвращает <strong>true</strong> если все элементы подходят под условие заданное в функции, иначе возвращает <strong>false</strong>
     </li>
     <li>
       <a href="#array-fill">fill()</a>
       <br>Изменяет исходный массив.
       <br>Принимает значение и опционально начальный и конечный индекс, может быть также отрицательный
-      <br>Возвращает исходный массив, заполнив все элементы массива от начального до конечного индекса одним значением
+      <br>Возвращает <strong>исходный массив</strong>, заполнив все элементы массива от начального до конечного индекса одним значением
     </li>
     <li>
       <a href="#array-filter">filter()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию и опционально значение, которое подставится в this для этой callback-функции
-      <br>Возвращает новый массив со всеми элементами, прошедшими проверку, задаваемую в передаваемой функции
+      <br>Возвращает <strong>новый массив</strong> со всеми элементами, прошедшими проверку, задаваемую в передаваемой функции
     </li>
     <li>
       <a href="#array-find">find()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию и опционально значение, которое подставится в this для этой callback-функции
-      <br>Возвращает первый элемент, который удовлетворяет условию функции, иначе возвращает undefined
+      <br>Возвращает <strong>первый элемент</strong>, который удовлетворяет условию функции, иначе возвращает <strong>undefined</strong>
     </li>
     <li>
       <a href="#array-find-index">findIndex()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию и опционально значение, которое подставится в this для этой callback-функции
-      <br>Возвращает индекс первого элемента, который удовлетворяет условию функции, иначе возвращает -1
+      <br>Возвращает <strong>индекс первого элемента</strong>, который удовлетворяет условию функции, иначе возвращает <strong>-1</strong>
     </li>
     <li>
       <a href="#array-find-last">findLast()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию и опционально значение, которое подставится в this для этой callback-функции
-      <br>Возвращает первый элемент с конца массива, который удовлетворяет условию функции, иначе возвращает undefined
+      <br>Возвращает <strong>последний элемент</strong>, который удовлетворяет условию функции, иначе возвращает <strong>undefined</strong>
     </li>
     <li>
       <a href="#array-find-last-index">findLastIndex()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию и опционально значение, которое подставится в this для этой callback-функции
-      <br>Возвращает индекс первого элемента с конца массива, который удовлетворяет условию функции, иначе возвращает -1
+      <br>Возвращает <strong>индекс последнего элемента</strong>, который удовлетворяет условию функции, иначе возвращает <strong>-1</strong>
     </li>
     <li>
       <a href="#array-flat">flat()</a>
       <br>Не изменяет исходныый массив
       <br>Принимает опционально целое положительное число
-      <br>Возвращает новый массив, в котором переносит вложенные массивы на указанный уровень. Уровень по-умолчанию равен 1
+      <br>Возвращает <strong>новый массив</strong>, в котором переносит вложенные массивы на указанный уровень. Уровень по-умолчанию равен 1
     </li>
     <li>
       <a href="#array-flat-map">flatMap()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию и опционально значение, которое подставится в this для этой callback-функции
-      <br>Возвращает новый массив, сначала применяя callback-функцию к каждому элементу исходного массива, а затем убирая один уровень вложенности. Аналогично последовательному использованию .map() и .flat() на исходном массиве
+      <br>Возвращает <strong>новый массив</strong>, сначала применяя callback-функцию к каждому элементу исходного массива, а затем убирая один уровень вложенности. Аналогично последовательному использованию .map() и .flat() на исходном массиве
     </li>
     <li>
       <a href="#array-for-each">forEach()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию, которую выполнит на каждом элементе массива и опционально значение, которое подставится в this для этой callback-функции
-      <br>Возвращает undefined
+      <br>Возвращает <strong>undefined</strong>
     </li>
     <li>
       <a href="#array-from">Array.from()</a>
       <br>Принимает итерируемый или массивоподобный объект и опционально еще два параметра - callback-функцию для каждого элемента массива и значение, которое подставится в this для этой callback-функции
-      <br>Возвращает новый массив, созданный из указанного объекта, применив к каждому элементу callback-функцию, если есть
+      <br>Возвращает <strong>новый массив</strong>, созданный из указанного объекта, применив к каждому элементу callback-функцию, если есть
     </li>
     <li>
       <a href="#array-from-async">Array.fromAsync()</a>
       <br>Принимает асинхронно итерируемый, итерируемый или массивоподобный объект
-      <br>Возвращает новый Promise значением выполнения которого является новый Array экземпляр
+      <br>Возвращает <strong>новый Promise</strong> значением выполнения которого является новый Array экземпляр
     </li>
     <li>
       <a href="#array-includes">includes()</a>
       <br>Не изменяет исходный массив
       <br>Принимает элемент для поиска и опционально начальный индекс, может также быть отрицательным
-      <br>Возвращает true если исходный массив содержит указанный элемент, иначе возвращает false
+      <br>Возвращает <strong>true</strong> если исходный массив содержит указанный элемент, иначе <strong>false</strong>
     </li>
     <li>
       <a href="#array-index-of">indexOf()</a>
       <br>Не изменяет исходный массив
       <br>Принимает элемент для поиска и опционально начальный индекс
-      <br>Возвращает индекс первого найденного элемента, иначе возвращает -1
+      <br>Возвращает <strong>индекс</strong> первого найденного элемента, иначе <strong>-1</strong>
     </li>
     <li>
       <a href="#array-is-array">Array.isArray()</a>
       <br>Принимает объект для проверки
-      <br>Возвращает true, если объект является массивом, иначе возвращает false
+      <br>Возвращает <strong>true</strong>, если объект является массивом, иначе <strong>false</strong>
     </li>
     <li>
       <a href="#array-join">join()</a>
       <br>Не изменяет исходный массив
       <br>Принимает опционально символ-разделитель
-      <br>Возвращает строку, в которую объединяет все элементы массива используя указанный разделитель или запятую по-умолчанию
+      <br>Возвращает <strong>строку</strong>, в которую объединяет все элементы массива используя указанный разделитель или запятую по-умолчанию
     </li>
     <li>
       <a href="#array-keys">keys()</a>
       <br>Не изменяет исходный массив
       <br>Не принимает параметры
-      <br>Возвращает новый итератор массива Array Iterator, содержащий ключи каждого индекса в массиве
+      <br>Возвращает <strong>новый итератор</strong> массива Array Iterator, содержащий ключи каждого индекса в массиве
     </li>
     <li>
       <a href="#array-last-index-of">lastIndexOf()</a>
       <br>Не изменяет исходный массив
       <br>Принимает элемент для поиска и опционально начальный индекс, может быть также отрицательным
-      <br>Возвращает индекс первого найденного элемента начиная по-умолчанию с конца массива или с начального индекса до начала массива, иначе возвращает -1
+      <br>Возвращает <strong>индекс последнего найденного элемента</strong> по-умолчанию ища до конца массива или до указанного индекса, иначе возвращает <strong>-1</strong>
     </li>
     <li>
       <a href="#array-map">map()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию и опционально значение, которое подставится в this для этой callback-функции
-      <br>Возвращает новый массив с результатом вызова указанной функции для каждого элемента массива
+      <br>Возвращает <strong>новый массив</strong> с результатом вызова указанной функции для каждого элемента массива
     </li>
     <li>
       <a href="#array-of">Array.of()</a>
       <br>Принимает произвольное число аргументов
-      <br>Возвращает новый массива из произвольного числа аргументов
+      <br>Возвращает <strong>новый массив</strong> из произвольного числа аргументов
     </li>
     <li>
       <a href="#array-pop">pop()</a>
       <br>Изменяет исходный массив
       <br>Не принимает параметры
-      <br>Возвращает последний элемент массива
+      <br>Возвращает <strong>последний элемент массива</strong>
       <br>Удаляет последний элемент из массива
     </li>
     <li>
       <a href="#array-push">push()</a>
       <br>Изменяет исходный массив
       <br>Принимает один или более элементов
-      <br>Возвращает новую длину массива
+      <br>Возвращает <strong>новую длину массива</strong>
       <br>Добавляет указанные аргументы в конец массива
     </li>
     <li>
       <a href="#array-reduce">reduce()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию
-      <br>Возвращает одно значение как результат применения этой функции к каждому элементу массива (слева-направо)
+      <br>Возвращает <strong>одно значение</strong> как результат применения этой функции к каждому элементу массива (слева-направо)
     </li>
     <li>
       <a href="#array-reduce-right">reduceRight()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию
-      <br>Возвращает одно значение как результат применения этой функции к каждому элементу массива (справа-налево)
+      <br>Возвращает <strong>одно значение</strong> как результат применения этой функции к каждому элементу массива (справа-налево)
     </li>
     <li>
       <a href="#array-reverse">reverse()</a>
       <br>Изменяет исходный массив
       <br>Не принимает параметры
-      <br>Возвращает исходный массив с обратным порядком следования элементов
+      <br>Возвращает <strong>исходный массив</strong> с обратным порядком следования элементов
     </li>
     <li>
       <a href="#array-shift">shift()</a>
       <br>Изменяет исходный массив
       <br>Не принимает параметры
-      <br>Возвращает первый элемент массива
+      <br>Возвращает <strong>первый элемент</strong> массива
       <br>Удаляет первый элемент из массива
     </li>
     <li>
       <a href="#array-slice">slice()</a>
       <br>Не изменяет исходный массив
-      <br>Принимает опционально начальный и конечный индекс, индексы также могут быть отрицательные
-      <br>Возвращает новый массив, содержащий копию части исходного массива от начального до конечного индекса
+      <br>Принимает опционально начальный и конечный индекс. Это целое число, может быть также отрицательным
+      <br>Возвращает <strong>новый массив</strong>, содержащий копию части исходного массива от начального до конечного индекса
     </li>
     <li>
       <a href="#array-some">some()</a>
       <br>Не изменяет исходный массив
       <br>Принимает callback-функцию
-      <br>Возвращает true если хотя бы один элемент подходит под условие функции, иначе возвращает false
+      <br>Возвращает <strong>true</strong> если хотя бы один элемент подходит под условие функции, иначе <strong>false</strong>
     </li>
     <li>
       <a href="#array-sort">sort()</a>
       <br>Изменяет исходный массив
       <br>Принимает опционально callback-функцию для сортировки
-      <br>Возвращает отсортированный массив согласно этой функции. По-умолчанию сортирует по порядку кодовых точек Unicode
+      <br>Возвращает <strong>отсортированный массив</strong> согласно этой функции. По-умолчанию сортирует по порядку кодовых точек Unicode
     </li>
     <li>
       <a href="#array-splice">splice()</a>
       <br>Изменяет исходный массив
       <br>Принимает начальный индекс и опционально число удаляемых элементов и элементы, которые надо вставить вместо них
-      <br>Возвращает массив удаленных элементов
+      <br>Возвращает <strong>массив</strong> удаленных элементов
       <br>Изменяет содержимое массива, удаляя и добавляя новые элементы, начиная с начального индекса
     </li>
     <li>
       <a href="#array-to-locale-string">toLocaleString()</a>
       <br>Не изменяет исходный массив
       <br>Не принимает параметры
-      <br>Возвращает строковое представление элементов массива
+      <br>Возвращает <strong>строку</strong> (строковое представление элементов массива через запятую)
     </li>
     <li>
       <a href="#array-to-reversed">toReversed()</a>
       не принимает параметры
-      <br>Не изменяет исходный массив.
-      <br>Возвращает новый массив с обратным порядком элементов
+      <br>Не изменяет исходный массив
+      <br>Возвращает <strong>новый массив</strong> с обратным порядком элементов
     </li>
     <li>
       <a href="#array-to-sorted">toSorted()</a>
       принимает опционально callback-функцию
       <br>Не изменяет исходный массив
-      <br>Возвращает новый массив с отсортированными элементами согласно указанной функции. По-умолчанию сортирует по порядку кодовых точек Unicode
+      <br>Возвращает <strong>новый массив</strong> с отсортированными элементами согласно указанной функции. По-умолчанию сортирует по порядку кодовых точек Unicode
     </li>
     <li>
       <a href="#array-to-spliced">toSpliced()</a>
       принимает начальный индекс и опционально число удаляемых элементов и элементы, которые надо вставить вместо них
-      <br>Не изменяет исходный массив.
-      <br>Возвращает новый массив удаляя и добавляя новые элементы, начиная с начального индекса
+      <br>Не изменяет исходный массив
+      <br>Возвращает <strong>новый массив</strong> удаляя и добавляя новые элементы, начиная с начального индекса
     </li>
     <li>
       <a href="#array-to-string">toString()</a>
       не принимает параметры
       <br>Не изменяет исходный массив
-      <br>Возвращает строковое представление элементов массива
+      <br>Возвращает <strong>строку</strong> (строковое представление элементов массива через запятую)
     </li>
     <li>
       <a href="#array-unshift">unshift()</a>
       принимает один или более элементов
       <br>Изменяет исходный массив.
-      <br>Возвращает новую длину массива
+      <br>Возвращает <strong>новую длину массива</strong>
       <br>Добавляет указанные аргументы в начало массива
     </li>
     <li>
       <a href="#array-values">values()</a>
       не принимает параметры
       <br>Не изменяет исходный массив
-      <br>Возвращает новый объект итератора массива Array Iterator, содержащий значения для каждого индекса в массиве
+      <br>Возвращает <strong>новый объект</strong> итератора массива Array Iterator, содержащий значения для каждого индекса в массиве
     </li>
     <li><a href="#array-with">with()</a>
       принимает индекс и значение
       <br>Не изменяет исходный массив
-      <br>Возвращает новый массив, созданный из исходного, в котором по указанному индексу стоит указанное значение
+      <br>Возвращает <strong>новый массив</strong>, созданный из исходного, в котором по указанному индексу стоит указанное значение
     </li>
   </ol>
 </article>
@@ -619,7 +619,7 @@ for (let item of iterator) {
   <strong>Появился</strong> в es2023
   <br><strong>Не изменяет исходный массив</strong>
   <br><strong>Принимает</strong> callback-функцию и опционально значение, которое подставится в this для этой callback-функции
-  <br><strong>Возвращает</strong> первый элемент с конца массива, который удовлетворяет условию функции, иначе возвращает undefined
+  <br><strong>Возвращает</strong> последний элемент, который удовлетворяет условию функции, иначе возвращает undefined
 
   <h3>Задачи на метод findLast()</h3>
   <p>Найти первый с конца элемент больше 0</p>
@@ -644,7 +644,7 @@ for (let item of iterator) {
   <strong>Появился</strong> в es2023
   <br><strong>Не изменяет исходный массив</strong>
   <br><strong>Принимает</strong> callback-функцию и опционально значение, которое подставится в this для этой callback-функции
-  <br><strong>Возвращает</strong> индекс первого элемента с конца массива, который удовлетворяет условию функции, иначе возвращает -1
+  <br><strong>Возвращает</strong> индекс последнего элемента, который удовлетворяет условию функции, иначе возвращает -1
 
   <h3>Задачи на метод findLastIndex()</h3>
   <p>Найти индекс первого с конца элемента который больше 0</p>
