--- a/src/components/code/code-js/js-corejs/pages/elem-error.html
+++ b/src/components/code/code-js/js-corejs/pages/elem-error.html
@@ -1,13 +1,43 @@
-<h1>Error</h1>
+<h1>Объект Error</h1>
+
+
+<!-- Содержание -->
+<article class="article">
+  <h2>Содержание</h2>
+
+  <p><a href="#links">links</a></p>
+  <p><a href="#about">about</a></p>
+  8 встроенных видов ошибок
+  <ol>
+    <li><a href="#error-aggregate">AggregateError</a></li>
+    <li><a href="#error-eval">EvalError</a></li>
+    <li><a href="#error-internal">InternalError</a></li>
+    <li><a href="#error-range">RangeError</a></li>
+    <li><a href="#error-reference">ReferenceError</a></li>
+    <li><a href="#error-syntax">SyntaxError</a></li>
+    <li><a href="#error-type">TypeError</a></li>
+    <li><a href="#error-uri">URIError</a></li>
+  </ol>
+</article>
 
 
 <!-- links -->
 <article class="article">
+  <div class="anchor" id="links"></div>
   <h2>links</h2>
   <p><a href="https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference/Global_Objects/Error">developer.mozilla.org</a></p>
   <p><a href="https://learn.javascript.ru/try-catch">learn.javascript.ru/try-catch</a></p>
   <p><a href="https://doka.guide/js/errors/">doka.guide/js/errors</a></p>
 </article>
+
+
+<!-- about -->
+<article class="article">
+  <div class="anchor" id="about"></div>
+  <h2>about</h2>
+  <p>JavaScript умеет обрабатывать некорректный код и сообщать об ошибке в коде. Существует семь встроенных видов ошибок, также можно создать свои собственные. Встроенные ошибки генерируются самим движком JavaScript при выполнении программы, а пользовательские — создаются с помощью конструктора Error. Оба типа ошибок можно ловить в конструкции try...catch.</p>
+</article>
+
 
 
 
