--- a/src/components/code/code-js/js-corejs/pages/elem-map.html
+++ b/src/components/code/code-js/js-corejs/pages/elem-map.html
@@ -1,23 +1,26 @@
-<h1>Map</h1>
-
-
-<!-- links -->
-<article class="article">
-  <h2>links</h2>
-  <p><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map">developer.mozilla.org</a></p>
-  <p><a href="https://learn.javascript.ru/map-set">learn.javascript.ru/map-set</a></p>
-</article>
+<h1>Объект Map</h1>
 
 
 <!-- Содержание -->
 <article class="article">
   <h2>Содержание</h2>
 
+  <p><a href="#links">links</a></p>
   <p><a href="#about">about</a></p>
   <p><a href="#create">Создание объекта Map</a></p>
   <p><a href="#iterate">Перебор объекта Map</a></p>
   <p><a href="#properties">Свойства Map</a></p>
   <p><a href="#methods">Методы Map</a></p>
+</article>
+
+
+<!-- links -->
+<article class="article">
+  <div class="anchor" id="links"></div>
+  <h2>links</h2>
+  
+  <p><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map">developer.mozilla.org</a></p>
+  <p><a href="https://learn.javascript.ru/map-set">learn.javascript.ru/map-set</a></p>
 </article>
 
 
