--- a/src/components/code/code-js/js-corejs/pages/elem-set.html
+++ b/src/components/code/code-js/js-corejs/pages/elem-set.html
@@ -1,4 +1,4 @@
-<h1>Set</h1>
+<h1>Объект Set</h1>
 
 
 <!-- links -->
@@ -16,8 +16,8 @@
   <p><a href="#about">about</a></p>
   <p><a href="#create">Создание объекта Set</a></p>
   <p><a href="#iterate">Перебор объекта Set</a></p>
-  <p><a href="#properties">Свойства Set</a></p>
-  <p><a href="#methods">Методы Set</a></p>
+  <p><a href="#properties">Свойства объекта Set</a></p>
+  <p><a href="#methods">Методы объекта Set</a></p>
 </article>
 
 
@@ -59,10 +59,10 @@
 </article>
 
 
-<!-- Свойства Set -->
+<!-- Свойства объекта Set -->
 <article class="article">
   <div class="anchor" id="properties"></div>
-  <h2>Свойства Set</h2>
+  <h2>Свойства объекта Set</h2>
   
   <p>После создания любая коллекция имеет два свойства</p>
   <ol>
@@ -88,10 +88,10 @@
 </article>
 
 
-<!-- Методы Set -->
+<!-- Методы объекта Set -->
 <article class="article">
   <div class="anchor" id="methods"></div>
-  <h2>Методы Set</h2>
+  <h2>Методы объекта Set</h2>
 
   <p>Методы объекта Set, записанные в его прототипе Set.prototype.</p>
   <ol>
