--- a/src/components/code/code-js/js-datatypes/pages/elem-number.html
+++ b/src/components/code/code-js/js-datatypes/pages/elem-number.html
@@ -1,4 +1,4 @@
-<h1>Number</h1>
+<h1>Тип number</h1>
 
 <!-- Заголовок -->
 <div class="article">
@@ -14,8 +14,6 @@
     <p><a href="#about">about</a></p>
     <p><a href="#create">Создание числа</a></p>
     <p><a href="#convert">Преобразование к числу</a></p>
-    <p><a href="#properties">Свойства чисел</a></p>
-    <p><a href="#methods">Методы чисел</a></p>
   </div>
 
 </div>
@@ -260,251 +258,3 @@ Number(a); // 10
   <code>Math.round(''); // 0</code>
   <code>Math.round(true); // 1</code>
 </article>
-
-
-<!-- Свойства чисел -->
-<article class="article">
-  <div class="anchor" id="properties"></div>
-  <h2>Свойства чисел</h2>
-
-  <ol>
-    <li>
-      <a href="#number-epsilon">Number.EPSILON</a>
-      <br>Примерно равно 2 в минус 52 степени
-      <br>Свойство Number.EPSILON представляет собой разницу между единицей и наименьшим значением, большим единицы, которое может быть представлено типом Number
-    </li>
-    <li>
-      <a href="#number-max-safe">Number.MAX_SAFE_INTEGER</a>
-      <br>Равно 9007199254740991 или 2<sup>53</sup> - 1
-      <br>Константа, которая представляет максимальное безопасное целое число
-    </li>
-    <li>
-      <a href="#number-max-value">Number.MAX_VALUE</a>
-      <br>Примерно равно 1.79E+308
-      <br>Свойство, которое представляет максимальное числовое значение, представимое в JavaScript. Значения, большие MAX_VALUE представляются как «бесконечность».
-    </li>
-    <li>
-      <a href="#number-min-safe">Number.MIN_SAFE_INTEGER</a>
-      <br>Равно -9007199254740991 или -2<sup>53</sup> - 1
-      <br>Константа, которая представляет минимальное безопасное целое число
-    </li>
-    <li>
-      <a href="#number-min-value">Number.MIN_VALUE</a>
-      <br>Примерно равно 5e-324
-      <br>Свойство, которое представляет минимальное положительное числовое значение, представимое в JavaScript. Значения, меньшие MIN_VALUE преобразуются в 0
-    </li>
-    <li>
-      <a href="#number-nan">Number.NaN</a>
-      <br>Эквивалентно глобальному объекту NaN
-    </li>
-    <li>
-      <a href="#number-neg-infinity">Number.NEGATIVE_INFINITY</a>
-      <br>Отрицательная бесконечность
-    </li>
-    <li>
-      <a href="#number-pos-infinity">Number.POSITIVE_INFINITY</a>
-      <br>Положительная бесконечность
-    </li>
-  </ol>
-</article>
-
-
-<!-- 1. Number.EPSILON -->
-<article class="article">
-  <div class="anchor" id="number-epsilon"></div>
-  <h3>1. Number.EPSILON</h3>
-  <br>Примерно равно 2 в минус 52 степени
-  <br>Свойство Number.EPSILON представляет собой разницу между единицей и наименьшим значением, большим единицы, которое может быть представлено типом Number
-</article>
-
-
-<!-- 2. Number.MAX_SAFE_INTEGER -->
-<article class="article">
-  <div class="anchor" id="number-max-safe"></div>
-  <h3>2. Number.MAX_SAFE_INTEGER</h3>
-  <br>Константа, равная 9007199254740991 или 2<sup>53</sup> - 1, представляет максимальное безопасное целое число
-</article>
-
-
-<!-- 3. Number.MAX_VALUE -->
-<article class="article">
-  <div class="anchor" id="number-max-value"></div>
-  <h3>3. Number.MAX_VALUE</h3>
-  <br>Примерно равно 1.79E+308
-  <br>Свойство MAX_VALUE представляет максимальное числовое значение, представимое в JavaScript. Значения, большие MAX_VALUE представляются как «бесконечность».
-</article>
-
-
-<!-- 4. Number.MIN_SAFE_INTEGER -->
-<article class="article">
-  <div class="anchor" id="number-min-safe"></div>
-  <h3>4. Number.MIN_SAFE_INTEGER</h3>
-  <br>Константа, равная -9007199254740991 или -2<sup>53</sup> - 1, представляет минимальное безопасное целое число
-</article>
-
-
-<!-- 5. Number.MIN_VALUE -->
-<article class="article">
-  <div class="anchor" id="number-min-value"></div>
-  <h3>5. Number.MIN_VALUE</h3>
-  <br>Примерно равно 5e-324
-  <br>Свойство, которое представляет минимальное положительное числовое значение, представимое в JavaScript. Значения, меньшие MIN_VALUE преобразуются в 0
-</article>
-
-
-<!-- 6. Number.NaN -->
-<article class="article">
-  <div class="anchor" id="number-nan"></div>
-  <h3>6. Number.NaN</h3>
-  <br>Эквивалентно глобальному объекту NaN
-  <code>Number.NaN // NaN</code>
-</article>
-
-
-<!-- 7. Number.NEGATIVE_INFINITY -->
-<article class="article">
-  <div class="anchor" id="number-neg-infinity"></div>
-  <h3>7. Number.NEGATIVE_INFINITY</h3>
-  <br>Отрицательная бесконечность
-  <code>Number.NEGATIVE_INFINITY // -Infinity</code>
-  <code>Number.NEGATIVE_INFINITY * Number.NEGATIVE_INFINITY // Infinity</code>
-  <code>Number.NEGATIVE_INFINITY * Number.POSITIVE_INFINITY // -Infinity</code>
-</article>
-
-
-<!-- 8. Number.POSITIVE_INFINITY -->
-<article class="article">
-  <div class="anchor" id="number-pos-infinity"></div>
-  <h3>8. Number.POSITIVE_INFINITY</h3>
-  <br>Положительная бесконечность
-  <code>Number.POSITIVE_INFINITY // Infinity</code>
-  <code>Number.POSITIVE_INFINITY * Number.POSITIVE_INFINITY // Infinity</code>
-</article>
-
-
-<!-- Методы чисел -->
-<article class="article">
-  <div class="anchor" id="methods"></div>
-  <h2>Методы чисел</h2>
-
-  <ol>
-    <li>
-      <a href="#number-is-finite">Number.isFinite()</a>
-      <br>Принимает значение, и проверяет является ли это значение коненым числом
-      <br>Возвращает true если передано конечное число, иначе возвращает false
-    </li>
-    <li>
-      <a href="#number-is-integer">Number.isInteger()</a>
-      <br>Принимает значение, и проверяет является ли это значение целым числом
-      <br>Возвращает true если передано целое число, иначе возвращает false
-    </li>
-    <li>
-      <a href="#number-is-nan">Number.isNaN()</a>
-      <br>Принимает значение, и проверяет является ли это значение NaN
-      <br>Возвращает true если передано число со значением NaN, иначе возвращает false
-    </li>
-    <li>
-      <a href="#number-is-safe-integer">Number.isSafeInteger()</a>
-      <br>Принимает значение, и проверяет является ли это значение безопасным целым числом
-      <br>Возвращает true если передано безопасное целое число, иначе возвращает false
-    </li>
-    <li>
-      <a href="#number-parse-float">Number.parseFloat()</a>
-    </li>
-    <li>
-      <a href="#number-parse-int">Number.parseInt()</a>
-    </li>
-    <li>
-      <a href="#number-to-exp">toExponential()</a>
-    </li>
-    <li>
-      <a href="#number-to-fixed">toFixed()</a>
-    </li>
-    <li>
-      <a href="#number-to-locale-string">toLocaleString()</a>
-    </li>
-    <li>
-      <a href="#number-to-precision">toPrecision()</a>
-    </li>
-    <li>
-      <a href="#number-to-string">toString()</a>
-    </li>
-    <li>
-      <a href="#number-value-of">valueOf()</a>
-    </li>
-  </ol>
-</article>
-  
-
-<!-- 1. Number.isFinite() -->
-<article class="article">
-  <div class="anchor" id="number-is-finite"></div>
-  <h3>1. Number.isFinite()</h3>
-  <br>Принимает значение, и проверяет является ли это значение коненым числом
-  <br>Возвращает true если передано конечное число, иначе возвращает false
-  <br>Здесь не происходит преобразования типов. Если пришло не число, то сразу же возвращается false
-
-  <h3>Задачи на метод Number.isFinite()</h3>
-  <code>Number.isFinite(0); // true</code>
-  <code>Number.isFinite(Infinity); // false</code>
-  <code>Number.isFinite(NaN); // false</code>
-  <code>Number.isFinite('10'); // false</code>
-</article>
-
-
-<!-- 2. Number.isInteger() -->
-<article class="article">
-  <div class="anchor" id="number-is-integer"></div>
-  <h3>2. Number.isInteger()</h3>
-  <br>Принимает значение, и проверяет является ли это значение целым числом
-  <br>Возвращает true если передано целое число, иначе возвращает false
-  <br>Здесь не происходит преобразования типов. Если пришло не число, то сразу же возвращается false
-
-  <h3>Задачи на метод Number.isInteger()</h3>
-  <code>Number.isInteger(0); // true</code>
-  <code>Number.isInteger(Infinity); // false</code>
-  <code>Number.isInteger(NaN); // false</code>
-  <code>Number.isInteger('10'); // false</code>
-  <p>Вещественное число с точкой</p>
-  <code>Number.isInteger(5.0); // true</code>
-  <code>Number.isInteger(5.01); // false</code>
-</article>
-
-
-<!-- 3. Number.isNaN() -->
-<article class="article">
-  <div class="anchor" id="number-is-nan"></div>
-  <h3>3. Number.isNaN()</h3>
-  <br>Принимает значение, и проверяет является ли это значение NaN
-  <br>Возвращает true если передано число со значением NaN, иначе возвращает false
-  <br>Здесь не происходит преобразования типов. Если пришло не число, то сразу же возвращается false
-
-  <h3>Задачи на метод Number.isNaN()</h3>
-  <p>Эти значения будут true и для проверки isNaN()</p>
-  <code>Number.isNaN(NaN); // true</code>
-  <code>Number.isNaN(Number.NaN); // true</code>
-  <code>Number.isNaN(0 / 0); // true</code>
-  <p>Эти значения будут false и для проверки isNaN()</p>
-  <code>Number.isNaN(true); // false</code>
-  <code>Number.isNaN(null); // false</code>
-  <code>Number.isNaN(37); // false</code>
-
-  <h3>Метод Number.isNaN(). Особенности</h3>
-  <p>Это более надежная версия оригинальной глобальной функции isNaN()</p>
-  <p>При использовании глобальной функции isNaN() это всё будет true</p>
-  <code>Number.isNaN("NaN"); // false</code>
-  <code>Number.isNaN(undefined); // false</code>
-  <code>Number.isNaN({}); // false</code>
-  <code>Number.isNaN("blabla"); // false</code>
-</article>
-
-
-<!-- 4. Number.isSafeInteger() -->
-<article class="article">
-  <div class="anchor" id="number-is-safe-integer"></div>
-  <h3>4. Number.isSafeInteger()</h3>
-  <br>Принимает значение, и проверяет является ли это значение безопасным целым числом
-  <br>Возвращает true если передано безопасное целое число, иначе возвращает false
-</article>
-
-
