--- a/src/components/front/algorithm/pages/elem-train1.html
+++ b/src/components/front/algorithm/pages/elem-train1.html
@@ -42,6 +42,21 @@
         <li><a href="#train-4-sort">Сортировка подсчетом</a></li>
         <li><a href="#train-4-task-1">Задача 1. Можно ли получить число из другого перестановкой цифр</a></li>
         <li><a href="#train-4-dict">Словари</a></li>
+        <li><a href="#train-4-task-2">Задача 2. Сколько пар ладей бьют друг друга</a></li>
+        <li><a href="#train-4-task-3">Задача 3. Гистограмма Hello, world!</a></li>
+        <li><a href="#train-4-opt">Задел под оптимизацию</a></li>
+        <li><a href="#train-4-task-4">Задада 4. Сгруппировать слова по общим буквам</a></li>
+      </ol>
+    </li>
+    <li>
+      <a href="#l12">Разбор ДЗ по лекции 1 и 2</a>
+      <ol>
+        <li><a href="#l1-1">Занятие 1. Узник замка Иф</a></li>
+        <li><a href="#l1-2">Занятие 1. Метро</a></li>
+        <li><a href="#l1-3">Занятие 1. Скорая помощь</a></li>
+        <li><a href="#l2-1">Занятие 2. Симметричная последовательность</a></li>
+        <li><a href="#l2-2">Занятие 2. Наибольшее произведение трех чисел</a></li>
+        <li><a href="#l2-3">Занятие 2. Сапер</a></li>
       </ol>
     </li>
   </ol>
@@ -1086,13 +1101,406 @@ if (d === 0) {
 </article>
 
 
+<!-- Задача 2. Сколько пар ладей бьют друг друга -->
+<article class="article">
+  <div class="anchor" id="train-4-task-2"></div>
+  <h2>Задача 2. Сколько пар ладей бьют друг друга</h2>
+
+  <p>На шахматной доске NxN нажодятся M ладей (ладья бьет клетки на той же горизонтали или вертикали до ближайшей занятой)</p>
+  <p>Определите, сколько пар ладей бьют друг друга. Ладьи задаются парой чисел I и J, обозначающих координаты клетки</p>
+  <code>1 &lt;= N &lt;= 10^9, 0 &lt;= M &lt;= 2 * 10^5</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Для каждой занятой горизонтали и вертикали будем хранить количество ладей на них. Количество пар в горизонтали (вертикали) равно количеству ладей минус 1. Суммируем это количество пар для всех горизонталей и вертикалей.</p>
+<pre>function count(coord) {
+  // создадим два словаря
+  // для горизонталей
+  let row = {};
+  // для вертикалей
+  let col = {};
+  // пройдем по всем координатам
+  for (let i = 0; i &lt; coord.length; i++) {
+    // заполним словарь горизонталей
+    if (!row[coord[i][0]]) {
+      row[coord[i][0]] = 0;
+    }
+    row[coord[i][0]]++;
+    // заполним словарь вертикалей
+    if (!col[coord[i][1]]) {
+      col[coord[i][1]] = 0;
+    }
+    col[coord[i][1]]++;
+  }
+  // найдем пары на горизонталях
+  let pairsRow = 0;
+  for (let key in row) {
+    pairsRow += row[key] -1;
+  }
+  // найдем пары на вертикалях
+  let pairsCol = 0;
+  for (let key in col) {
+    pairsCol += col[key] -1;
+  }
+  return pairsRow + pairsCol;
+}</pre>
+  <p>Тест</p>
+  <code>let w1 = [[2,7],[2,4],[4,7],[5,4]];</code>
+  <code>console.log(count(w1)); // 3</code>
+  </details>
+</article>
 
 
+<!-- Задача 3. Гистограмма Hello, world! -->
+<article class="article">
+  <div class="anchor" id="train-4-task-3"></div>
+  <h2>Задача 3. Гистограмма Hello, world!</h2>
+
+  <p>Дана строка S</p>
+  <p>Выведите гистограмму как в примере (коды символов отсортированы)</p>
+  <code>S = Hello, world!</code>
+<pre>
+      #
+      ##
+##########
+ !,Hdelorw
+</pre>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Для каждого символа в словаре посчитаем, сколько раз он встречался. Найдем самый частый символ и переберем количество от этого числа до 1. Пройдем по всем отсортированным ключам и если количество больше счетчика - выведем #</p>
+    <p>Заведем словарь. Ключами будут символы в строке, а значениями - сколько раз они встречаются. Пройдем по строке, если символ еще не встречался, то создаем в словаре такой ключ со значением ноль. Потом в любом случае прибавляем 1.</p>
+    <p>Потом нужно отсортировать все ключи в словаре и занести в счетчик максимальное значение. В цикле от максимального значения счетчика до 1 пройтись по словоарю и вывести построчно гистограмму.</p>
+<pre>function hist(str) {
+  // создадим словарь
+  let dict = {};
+  // максимальное число одинаковых букв
+  let max = 0;
+  // пройдем по символам в строке
+  for (let i = 0; i &lt; str.length; i++) {
+    // заполним словарь
+    if (!dict[str[i]]) {
+      dict[str[i]] = 0;
+    }
+    dict[str[i]]++;
+    // находим максимум
+    if (dict[str[i]] > max) {
+      max = dict[str[i]];
+    }
+  }
+  // отсортируем ключи объекта
+  let sortedKeys = Object.keys(dict).sort();
+  // переменная для вывода строки на экран
+  let result = [];
+  // начиная с верхней строки и до нижней
+  for (let i = max; i &gt; 0; i--) {
+    // смотрим для каждого ключа
+    sortedKeys.forEach(key => {
+      // есть ли он в этой строке
+      if (dict[key] &gt;= i) {
+        // если есть добавляем #
+        result.push('#');
+      } else {
+        // если нет добавляем пробел
+        result.push(' ');
+      }
+    })
+    // выведем строку на экран
+    console.log(result.join(''));
+    // обнулим переменную для
+    // создания следующей строки
+    result = [];
+  }
+}</pre>
+
+    <p>Тест</p>
+    <code>let w1 = 'Hello, world!';</code>
+    <code>hist(w1);</code>
+<pre>
+      #
+      ##
+##########
+</pre>
+    </details>
+</article>
 
 
+<!-- Задел под оптимизацию -->
+<article class="article">
+  <div class="anchor" id="train-4-opt"></div>
+  <h2>Задел под оптимизацию</h2>
+
+  <p>Преждевременная оптимизация - страшный грех. Например нужно за неделю написать код, который решает бизнес задачу. Но на самых быстрых алгоритмах такой код можно написать только за месяц. А решать задачу нужно уже сейчас. Поэтому выбирают решение попроще, не самое быстрое и эффективное, но которое позволит решить задачу уже сейчас.</p>
+  <p>Но если вы знаете как сделать лучше, но на это уже не остается времени, то неплохо оставить задел, чтобы в следующий раз при похожей проблеме можно было быстренько переделать эту тормозящую часть.</p>
+
+  <h4>Всегда ли асимптотическое решение лучше?</h4>
+  <p>2*N log N или 1000*N?</p>
+  <p>Допустим, мы придумали два решения. Сложность одного O(N), другого - O(NlogN). Тоже классно, но похуже. Только подозрительно большая константа у линейного алгоритма. Найдем N при котором линейный алгоритм будет работать лучше. При N больше чем 2 в 500 степени, линейный алгоритм станет работать лучше. Но 2^500 примерно в 10^70 раз больше количества атомов во вселенной. В реальности разница констант в 500 раз все же случается редко.</p>
+
+  <h4>Некоторые другие критерии качества алгоритма</h4>
+  <ol>
+    <li>Потребление памяти</li>
+    <li>Время на реализацию</li>
+    <li>Сложность поддержки</li>
+    <li>Возможность распараллеливания</li>
+    <li>Необходимая квалификация сотрудника</li>
+    <li>Стоимость оборудования</li>
+  </ol>
+</article>
 
 
+<!-- Задада 4. Сгруппировать слова по общим буквам -->
+<article class="article">
+  <div class="anchor" id="train-4-task-4"></div>
+  <h2>Задада 4. Сгруппировать слова по общим буквам</h2>
 
+  <p>Сгруппировать слова по общим буквам</p>
+  <code>Ввод ['eat', 'tea', 'tan', 'ate', 'nat', 'bat']</code>
+  <code>Вывод [['ate', 'eat', 'tea'], ['nat', 'tan'], ['bat']]</code>
+
+  <details>
+    <summary>Решение 1</summary>
+    <p>Отсортируем в каждом слове буквы и это будет выступать в роли ключа, а значением будет список слов</p>
+<pre>function group(words) {
+  let groups = {};
+  words.forEach(word =&gt; {
+    let key = word.split('').sort();
+    if (!groups[key]) {
+      groups[key] = [];
+    }
+    groups[key].push(word)
+  });
+  let result = [];
+  for (let k in groups) {
+    result.push(groups[k]);
+  }
+
+  return result;
+}</pre>
+    <p>Вдруг слово будет длинное (N)? Сортировка займет O(NlogN). Количество различных букв в слове K&lt;=N, можем посчитать количество каждой за O(N) и отсортировать за O(KlogK), теоретически.</p>
+    <p>Но мы думаем: сейчас времени не хватает, осталось 2 минуты, я не успеваю это переделать. Но можно сделать задел на будущее.</p>
+
+    <h4>Задел для возможных оптимизаци</h4>
+    <p>Вынесем отдельно в функцию подсчет ключа. Будет тормозить - посмотрим на профилировщике где, и если долго считается ключ - легко поправим на что-то более эффективное.</p>
+<pre>function group(words) {
+  // функция подсчета ключа
+  function getKey(word) {
+    return word.split('').sort();
+  }
+
+  let groups = {};
+  words.forEach(word =&gt; {
+    let key = getKey(word);
+    if (!groups[key]) {
+      groups[key] = [];
+    }
+    groups[key].push(word)
+  });
+  let result = [];
+  for (let k in groups) {
+    result.push(groups[k]);
+  }
+
+  return result;
+}</pre>
+
+    <h4>Оптимизация</h4>
+    <p>Изменим функцию подсчета ключа. Создадим словарь. Пройдемся по буквам в слове. Сделаем сортировку подсчетом. Это будет работать за O(KlogK) при K&lt;=N. Сомнительная оптимизация. В среднем хуже чем было.</p>
+<pre>function group(words) {
+  // функция подсчета ключа
+  function getKey(word) {
+    let count = {};
+    for (i = 0; i &lt; word.length; i++) {
+      if(!count[word[i]]) {
+        count[word[i]] = 0;
+      }
+      count[word[i]]++;
+    }
+    let lst = [];
+    let sortedCount = Object.keys(count).sort();
+    sortedCount.forEach(sym =&gt; {
+      lst.push(sym);
+
+    })
+    return lst.sort();
+  }
+
+  let groups = {};
+  words.forEach(word =&gt; {
+    let key = getKey(word);
+    if (!groups[key]) {
+      groups[key] = [];
+    }
+    groups[key].push(word)
+  });
+  let result = [];
+  for (let k in groups) {
+    result.push(groups[k]);
+  }
+
+  return result;
+}</pre>
+
+    <p>Если такую оптимизацию не выносить в отдельную функцию, а делать в основном коде. То будет очень трудно понять что там вообще происходит.</p>
+  </details>
+</article>
+
+
+<!-- Разбор ДЗ по лекции 1 и 2 -->
+<article class="article">
+  <div class="anchor" id="l12"></div>
+  <h2>Разбор ДЗ по лекции 1 и 2</h2>
+</article>
+
+
+<!-- Занятие 1. Узник замка Иф -->
+<article class="article">
+  <div class="anchor" id="l1-1"></div>
+  <h2>Занятие 1. Узник замка Иф</h2>
+
+  <p>За многие годы заточения узник замка Иф проделал в стене прямоугольное отверстие размером D на E. Замок Иф сложен из кирпичей, рамзером A на B на C. Определите, сможет ли узник выбрасывать кирпичи в море через это отверстие, если стороны кирпича должны быть параллельны сторонам отверстия.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Можно перебрать все возможные способы и проверить пролезет ли кирпич в отверстие. Но это будет неэффективно. Давайте сначала упорядочим стороны кирпича от меньшей к большей A,B,C  и отверстия - D,E. Тогда получим меньшую сторону кирпича А и меньшую сторону отверстия D. Нам нужно сравнить две стороны A и D, и две стороны B и T. Самую длинную сторону кирпича ни с чем сравнивать не надо.</p>
+    <p>Кирпич пройдет в отверстие если A >= D и B >= E.</p>
+    <p>Чтобы упорядочить два числа, просто сравним их. Чтобы упорядочить три числа напишем сортировку пузырьком.</p>
+<pre>function uznik([a,b,c,d,e]) {
+  // функция сортировки
+  function sort2(n1, n2) {
+    if (n1 &gt; n2) {
+      return [n2, n1];
+    }
+    return [n1, n2];
+  }
+
+  // сортируем стороны
+  [a, b] = sort2(a, b);
+  [b, c] = sort2(b, c);
+  [a, b] = sort2(a, b);
+  [d, e] = sort2(d, e);
+
+  if (d &gt;= a && e &gt;=b) {
+    return true;
+  }
+  return false;
+}</pre>
+
+    <p>Тест</p>
+    <code>let w1 = [5,4,3,3,4];</code>
+    <code>console.log(uznik(w1)); // true</code>
+  </details>
+</article>
+
+
+<!-- Занятие 1. Метро -->
+<article class="article">
+  <div class="anchor" id="l1-2"></div>
+  <h2>Занятие 1. Метро</h2>
+
+  <p>На некоторых кросс-платформенных станциях метро (как, например, "Третьяковская") на разные стороны платформы приходят поезда разных направлений. Таня договорилась встретиться с подругой на такой станции, но поскольку подруга приехала из другого часового пояса, то из-за джетлага сильно проспала, и Тане пришлось долго ее ждать. Поезда всегда ходят точно по расписанию, и Таня знает, что поезд стоит на платформе ровно одну минуту, а интервал между поездами (время, в течение которого поезда у платформы нет) составляет a минут для поездов на первом пути и b минут для поездов на втором пути. То есть на первый путь приезжает поезд и стоит одну минуту, затем в течение a минут поезда у платформы нет, затем в течение одной минуты у платформы стоит следующий поезд и т.д.</p>
+  <p>Пока Таня стояла на платформе, она насчитала n поездов на первом пути и m поездов на втором пути. Определите минимальное и максимальное время, которое Таня могла провести на платформе, или сообщите, что она точно сбилась со счета.</p>
+  <p>Все поезда, которые видела Таня, она наблюдала в течение всей минуты, то есть Таня не приходит и не уходит с платформы посередине той минуты, когда поезд стоит на платформе.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Если Таня на первом пути видела 3 поезда, то минимум времени это время стоянки трех поездов и два интервала между поездами. Максимум времени это если к минимуму прибавить еще два интервала между поездами</p>
+    <code>min1 = a*(n-1)+n</code>
+    <code>max1 = a*(n-1)+n+2a</code>
+
+    <p>То же самое для второго пути</p>
+    <code>min2 = b*(m-1)+m</code>
+    <code>max2 = b*(m-1)+m+2b</code>
+
+    <p>Для определения минимального времени, проведенного Таней найдем максимум из минимумов, для максимального - найдем минимум из максимумов. Если максимальное время окажется меньше минимального, то Таня сбилась со счета.</p>
+<pre>function metro([a,b,n,m]) {
+  min1 = (a + 1) * (n - 1) + 1;
+  max1 = (a + 1) * (n - 1) + 1 + 2 * a;
+  min2 = (b + 1) * (m - 1) + 1;
+  max2 = (b + 1) * (m - 1) + 1 + 2 * b;
+
+  min = Math.max(min1, min2);
+  max = Math.min(max1, max2);
+
+  if (max &lt; min) {
+    return -1;
+  }
+  return [min, max];
+}</pre>
+
+    <p>Тест</p>
+    <code>let w1 = [2,4,5,2];</code>
+    <code>console.log(metro(w1)); // [ 13, 14 ]</code>
+    <code>let w2 = [2,4,5,5];</code>
+    <code>console.log(metro(w2)); // -1</code>
+  </details>
+</article>
+
+
+<!-- Занятие 1. Скорая помощь -->
+<article class="article">
+  <div class="anchor" id="l1-3"></div>
+  <h2>Занятие 1. Скорая помощь</h2>
+
+  <p>Бригада скорой помощи выехала по вызову в один из отдаленных районов. К сожалению, когда диспетчер получил вызов, он успел записать только адрес дома и номер квартиры K1, а затем связь прервалась. Однако он вспомнил, что по этому же адресу дома некоторое время назад скороя помощь выезжала в квартиру K2, которая расположена в подъезде P2 на этаже N2. Известно, что в доме M этажей и количество квартир на каждой лестничной площадке одинаково. Напишите программу, которая вычисляет номер подъезда P1 и номер этажа N1 квартиры K1</p>
+  <p>Числа до 10^6</p>
+</article>
+
+
+<!-- Занятие 2. Симметричная последовательность -->
+<article class="article">
+  <div class="anchor" id="l2-1"></div>
+  <h2>Занятие 2. Симметричная последовательность</h2>
+
+  <p>Последовательность чисел назовем симметричной, если она одинаково читается как слева направо, так и справа налево. Например, следующие последовательности являются симметричными:</p>
+  <code>123454321</code>
+  <code>12122121</code>
+  <p>Вашей программе будет дана последовательность чисел. Требуется определить, какое минимальное количество и каких чисел надо приписать в конец последовательности, чтобы она стала симметричной</p>
+  <p>Длина последовательности до 100</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Это ограничение говорит нам о том, что можно решать за O(N^2). Но есть алгоритм, который решает за линейное время используя префикс функции.</p>
+  </details>
+</article>
+
+
+<!-- Занятие 2. Наибольшее произведение трех чисел -->
+<article class="article">
+  <div class="anchor" id="l2-2"></div>
+  <h2>Занятие 2. Наибольшее произведение трех чисел</h2>
+
+  <p>В данном списке из n&lt;=10^5 целых чисел найдите три числа, произведение которых максимально</p>
+  <p>Решение должно иметь сложность O(n), где n - размер списка</p>
+  <p>Выведите три искомых числа в любом порядке</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Посмотрим, когда произведение трех чисел будет максимально? Если все числа положительные, тогда произведение трех максимальных чисел будет максимально. Если есть отрицательные числа, то максимальным может оказаться произведение двух минимальных отрицательных и одного максимального положительного.</p>
+    <p>Нам нужно отсортировать числа так чтобы три максимальных стояли справа, а два минимальных слева. Остальные числа сортировать не нужно.</p>
+    <p>У нас есть массив. Возьмем из него случайное число x и поставим числа меньше x слева, а числа больше x справа от x.</p>
+  </details>
+</article>
+
+
+<!-- Занятие 2. Сапер -->
+<article class="article">
+  <div class="anchor" id="l2-3"></div>
+  <h2>Занятие 2. Сапер</h2>
+
+  <p>Вам необходимо построить поле для игры "Сапер" по его конфигурации - размерам и координатам расставленых мин</p>
+  <p>Вкратце напомним правила построения поля для игры "Сапер"</p>
+  <ul>
+    <li>Поле состоит из клеток с минами и пустых клеток</li>
+    <li>Клетки с миной обозначаются символом *</li>
+    <li>Пустые клетки содержат число k(i,j), 0&lt;=k(i,j)&lt;=8 количество мин на соседних клетках. Соседними клетками являются восемь клеток, имеющих смежный угол или сторону</li>
+  </ul>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Проблема задачи в том, чтобы найти у клетки 8 соседей надо написать 8 if-ов. Еще надо проверять стоит ли клетка на у края или в углу. Решение этих проблем - это массив сдвигов.</p>
+  </details>
+</article>
 
 
 
