--- a/src/components/code/code-js/js-corejs/pages/elem-date.html
+++ b/src/components/code/code-js/js-corejs/pages/elem-date.html
@@ -1,21 +1,14 @@
 <h1>Объект Date</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
     <p><a href="#links">links</a></p>
     <p><a href="#about">about</a></p>
     <p><a href="#methods">Методы объекта Date</a></p>
-  </div>
-
-</div>
+</article>
 
 
 <!-- links -->
