--- a/src/components/code/code-js/js-corejs/pages/elem-globalthis.html
+++ b/src/components/code/code-js/js-corejs/pages/elem-globalthis.html
@@ -1,24 +1,17 @@
 <h1>globalThis (Глобальный объект)</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#about">about</a></p>
-    <p><a href="#function">function</a></p>
-    <p><a href="#var">var</a></p>
-    <p><a href="#let-const">let и const</a></p>
-    <p><a href="#polyfil">Полифил для globalThis</a></p>
-  </div>
-
-</div>
+  <p><a href="#links">links</a></p>
+  <p><a href="#about">about</a></p>
+  <p><a href="#function">function</a></p>
+  <p><a href="#var">var</a></p>
+  <p><a href="#let-const">let и const</a></p>
+  <p><a href="#polyfil">Полифил для globalThis</a></p>
+</article>
 
 
 <!-- links -->
