--- a/src/components/code/code-js/js-corejs/pages/elem-math.html
+++ b/src/components/code/code-js/js-corejs/pages/elem-math.html
@@ -1,22 +1,15 @@
 <h1>Объект Math</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#about">about</a></p>
-    <p><a href="#const">Константы Math</a></p>
-    <p><a href="#methods">Методы Math</a></p>
-  </div>
-
-</div>
+  <p><a href="#links">links</a></p>
+  <p><a href="#about">about</a></p>
+  <p><a href="#const">Константы Math</a></p>
+  <p><a href="#methods">Методы Math</a></p>
+</article>
 
 
 <!-- links -->
