--- a/src/components/code/code-js/js-corejs/pages/elem-regexp.html
+++ b/src/components/code/code-js/js-corejs/pages/elem-regexp.html
@@ -1,20 +1,13 @@
 <h1>Регулярные выражения</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#regexp">Регулярные выражения</a></p>
-  </div>
-
-</div>
+  <p><a href="#links">links</a></p>
+  <p><a href="#regexp">Регулярные выражения</a></p>
+</article>
 
 
 <!-- links -->
