--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -63,7 +63,8 @@
     <li><a href="rs-test/rs-test-websecurity.html" class="js-rs-test">[St2] Web Security</a> (79 из 100)</li>
     <li><a href="rs-test/rs-test-restful.html" class="js-rs-test">[St2] RESTful API Style</a> (85 из 100)</li>
     <li><a href="rs-test/rs-test-eventloop.html" class="js-rs-test">[St2] Event Loop & Animation</a> (88 из 100)</li>
-    <li><a href="rs-test/rs-test-testing.html" class="js-rs-test">[St2] Testing</a> (0 из 100)</li>
+    <li><a href="rs-test/rs-test-testing.html" class="js-rs-test">[St2] Testing</a> (75 из 100)</li>
+    <li><a href="rs-test/rs-test-error.html" class="js-rs-test">[St2] Error handling</a> (71 из 100)</li>
   </ol>
 </article>
 
